Support FLWR clause and existential quantifier