@@ -1,6 +1,8 @@
 package edu.ucsd.xmlalchemy.xquery;
 
 import edu.ucsd.xmlalchemy.xpath.Expression;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.w3c.dom.Node;
 
@@ -16,6 +18,6 @@ public class QueryElement implements Expression {
     @Override
     public List<Node> evaluate(Context ctx, List<Node> nodes) throws Exception {
         var queryNodes = query.evaluate(ctx, nodes);
-        return List.of(ctx.makeElementNode(tagName, queryNodes));
+        return new ArrayList<>(Arrays.asList(ctx.makeElementNode(tagName, queryNodes)));
     }
 }
